# agent-reinforcement-system

./: .gitignore  README.md  pyproject.toml  requirements.txt  xng
docker/: docker-compose.neo4j.yml
docs/: architecture.md  module-1-first-principles.md  module-2-ha-episodic-memory.md  module-3-autonomous-loop.md  module-4-consistency-and-recovery.md  module-5-openclaw-startup-hook-integration.md  quickstart.md
examples/: env.example  first_principles_system_prompt.md  goal_frame.example.json
runtime/: loop_memory.jsonl
schemas/: goal_frame.schema.json  loop_state.schema.json
src/: autonomous_loop.py  checkpoint_store.py  episode_ingest.py  journal_to_episode.py  kb_to_graph.py  neo4j_recall.py  startup_rehydrate.py  sync_backfill.py  sync_state.py  unified_memory_recall.py  xng.py
